# sportsed

./: .gitignore  .travis.yml  CMakeLists.txt  conanfile.py  conanfile.txt  config.h.in
clients/: CMakeLists.txt  main.cpp.in
clients/admin/: CMakeLists.txt
clients/admin/gui/: ClassesEditWidget.cpp  ClassesEditWidget.h  ClassesEditWidget.ui  CompetitionEditWidget.cpp  CompetitionEditWidget.h  CompetitionEditWidget.ui  CompetitorsEditWidget.cpp  CompetitorsEditWidget.h  CompetitorsEditWidget.ui  CoursesEditWidget.cpp  CoursesEditWidget.h  CoursesEditWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
clients/admin/models/: ClientModel.cpp  ClientModel.h  CourseModel.cpp  CourseModel.h  StageModel.cpp  StageModel.h
clients/clientlib/: AbstractRecordModel.cpp  AbstractRecordModel.h  Async.cpp  Async.h  CMakeLists.txt  ClientMainWindow.cpp  ClientMainWindow.h  CompetitionSelectDialog.cpp  CompetitionSelectDialog.h  CompetitionSelectDialog.ui  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  InterfaceSync.cpp  InterfaceSync.h  RecordObject.cpp  RecordObject.h  ServerConnection.cpp  ServerConnection.h
clients/printer/: Automation.cpp  Automation.h  AutomationsModel.cpp  AutomationsModel.h  CMakeLists.txt  Generator.cpp  Generator.h  MainWindow.cpp  MainWindow.h  Report.cpp  Report.h
clients/printer/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
commonlib/: CMakeLists.txt  CapnprotoUtil.cpp  CapnprotoUtil.h  Change.cpp  Change.h  Change.h.autosave  ChangeQuery.cpp  ChangeQuery.h  ChangeResponse.cpp  ChangeResponse.h  MessageSocket.cpp  MessageSocket.h  Record.cpp  Record.h  TableQuery.cpp  TableQuery.h  TcpMessageSocket.cpp  TcpMessageSocket.h  Validators.cpp  Validators.h
schema/: CMakeLists.txt  orm.capnp  pubsub.capnp
server/: CMakeLists.txt  DatabaseEngine.cpp  DatabaseEngine.h  DatabaseMigration.cpp  DatabaseMigration.h  DatabaseServer.cpp  DatabaseServer.h  main.cpp  tst_DatabaseEngine.cpp  tst_DatabaseMigration.cpp  tst_DatabaseServer.cpp  tst_Util.h
tests/: CMakeLists.txt  tst_client_server_tests.cpp
